contrib/cnd.modelimpl/test/unit/data/goldenfiles/org/netbeans/modules/cnd/modelimpl/trace/FileModel2Test/iz190413.c.clank.err
${origin}/iz190413.c:19:7: warning: extra tokens at end of #else directive
#else if HOST_CHARSET == HOST_CHARSET_EBCDIC
      ^
      //
${origin}/iz190413.c:21:2: error: #else after #else
#else 
 ^
